[package]
name = "api_actix_web"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api_actix_web"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"
lru = "0.7"

mimalloc = { version = "*", default-features = false } # for raw performance
#mimalloc = "*" # for additional security features, significant performance penalty

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[features]
default = ["mimalloc"]
cheating = []
extreme = []
mimalloc = []
